include/generated/ffi_m.h

uint32 BMessage_GetUInt32(const BMessage * self, const char * name, uint32 default_value);
uint32 BMessage_GetUInt321(const BMessage * self, const char * name, int32 index, uint32 default_value);
int64 BMessage_GetInt64(const BMessage * self, const char * name, int64 default_value);
int64 BMessage_GetInt641(const BMessage * self, const char * name, int32 index, int64 default_value);
uint64 BMessage_GetUInt64(const BMessage * self, const char * name, uint64 default_value);
uint64 BMessage_GetUInt641(const BMessage * self, const char * name, int32 index, uint64 default_value);
float BMessage_GetFloat(const BMessage * self, const char * name, float default_value);
float BMessage_GetFloat1(const BMessage * self, const char * name, int32 index, float default_value);
double BMessage_GetDouble(const BMessage * self, const char * name, double default_value);
double BMessage_GetDouble1(const BMessage * self, const char * name, int32 index, double default_value);
const void * BMessage_GetPointer(const BMessage * self, const char * name, int32 index, const void * default_value);
const void * BMessage_GetPointer1(const BMessage * self, const char * name, const void * default_value);
const char *BMessage_GetString(const BMessage * self, const char * name, const char * default_value);
const char *BMessage_GetString1(const BMessage * self, const char * name, int32 index, const char * default_value);
BRect *BMessage_GetRect(const BMessage * self, const char * name, int32 index, const BRect * default_value);
BRect *BMessage_GetRect1(const BMessage * self, const char * name, const BRect * default_value);
BPoint *BMessage_GetPoint(const BMessage * self, const char * name, int32 index, const BPoint * default_value);
BPoint *BMessage_GetPoint1(const BMessage * self, const char * name, const BPoint * default_value);
BSize *BMessage_GetSize(const BMessage * self, const char * name, int32 index, const BSize * default_value);
BSize *BMessage_GetSize1(const BMessage * self, const char * name, const BSize * default_value);
status_t BMessage_SetBool(BMessage * self, const char * name, bool value);
status_t BMessage_SetInt8(BMessage * self, const char * name, int8 value);
status_t BMessage_SetUInt8(BMessage * self, const char * name, uint8 value);
status_t BMessage_SetInt16(BMessage * self, const char * name, int16 value);
status_t BMessage_SetUInt16(BMessage * self, const char * name, uint16 value);
status_t BMessage_SetInt32(BMessage * self, const char * name, int32 value);
status_t BMessage_SetUInt32(BMessage * self, const char * name, uint32 value);
status_t BMessage_SetInt64(BMessage * self, const char * name, int64 value);
status_t BMessage_SetUInt64(BMessage * self, const char * name, uint64 value);
status_t BMessage_SetPointer(BMessage * self, const char * name, const void * value);
status_t BMessage_SetString(BMessage * self, const char * name, const char * string);
status_t BMessage_SetString1(BMessage * self, const char * name, const BString * string);
status_t BMessage_SetFloat(BMessage * self, const char * name, float value);
status_t BMessage_SetDouble(BMessage * self, const char * name, double value);
status_t BMessage_SetAlignment(BMessage * self, const char * name, const BAlignment * value);
status_t BMessage_SetPoint(BMessage * self, const char * name, const BPoint * value);
status_t BMessage_SetRect(BMessage * self, const char * name, const BRect * value);
status_t BMessage_SetSize(BMessage * self, const char * name, const BSize * value);
BMessage *BMessage_new();
BMessage *BMessage_new1(const BMessage * other);
BMessage *BMessage_new2(uint32 what);