src/generated/ffi_m.rs

    pub fn BMessage_GetUInt32(self_: *const c_void, name: *const c_char, default_value: u32) -> u32;
    pub fn BMessage_GetUInt321(self_: *const c_void, name: *const c_char, index: i32, default_value: u32) -> u32;
    pub fn BMessage_GetInt64(self_: *const c_void, name: *const c_char, default_value: i64) -> i64;
    pub fn BMessage_GetInt641(self_: *const c_void, name: *const c_char, index: i32, default_value: i64) -> i64;
    pub fn BMessage_GetUInt64(self_: *const c_void, name: *const c_char, default_value: u64) -> u64;
    pub fn BMessage_GetUInt641(self_: *const c_void, name: *const c_char, index: i32, default_value: u64) -> u64;
    pub fn BMessage_GetFloat(self_: *const c_void, name: *const c_char, default_value: c_float) -> c_float;
    pub fn BMessage_GetFloat1(self_: *const c_void, name: *const c_char, index: i32, default_value: c_float) -> c_float;
    pub fn BMessage_GetDouble(self_: *const c_void, name: *const c_char, default_value: c_double) -> c_double;
    pub fn BMessage_GetDouble1(self_: *const c_void, name: *const c_char, index: i32, default_value: c_double) -> c_double;
    // NOT_SUPPORTED: pub fn BMessage_GetColor(self_: *const c_void, name: *const c_char, default_value: rgb_color) -> rgb_color;
    // NOT_SUPPORTED: pub fn BMessage_GetColor1(self_: *const c_void, name: *const c_char, index: i32, default_value: rgb_color) -> rgb_color;
    pub fn BMessage_GetPointer(self_: *const c_void, name: *const c_char, index: i32, default_value: *const c_void) -> *const c_void;
    pub fn BMessage_GetPointer1(self_: *const c_void, name: *const c_char, default_value: *const c_void) -> *const c_void;
    pub fn BMessage_GetString(self_: *const c_void, name: *const c_char, default_value: *const c_char) -> *const c_char;
    pub fn BMessage_GetString1(self_: *const c_void, name: *const c_char, index: i32, default_value: *const c_char) -> *const c_char;
    // NOT_SUPPORTED: pub fn BMessage_GetAlignment(self_: *const c_void, name: *const c_char, index: i32, default_value: *const c_void) -> BAlignment;
    // NOT_SUPPORTED: pub fn BMessage_GetAlignment1(self_: *const c_void, name: *const c_char, default_value: *const c_void) -> BAlignment;
    pub fn BMessage_GetRect(self_: *const c_void, name: *const c_char, index: i32, default_value: *const c_void) -> *mut c_void;
    pub fn BMessage_GetRect1(self_: *const c_void, name: *const c_char, default_value: *const c_void) -> *mut c_void;
    pub fn BMessage_GetPoint(self_: *const c_void, name: *const c_char, index: i32, default_value: *const c_void) -> *mut c_void;
    pub fn BMessage_GetPoint1(self_: *const c_void, name: *const c_char, default_value: *const c_void) -> *mut c_void;
    pub fn BMessage_GetSize(self_: *const c_void, name: *const c_char, index: i32, default_value: *const c_void) -> *mut c_void;
    pub fn BMessage_GetSize1(self_: *const c_void, name: *const c_char, default_value: *const c_void) -> *mut c_void;
    pub fn BMessage_SetBool(self_: *mut c_void, name: *const c_char, value: bool) -> status_t;
    pub fn BMessage_SetInt8(self_: *mut c_void, name: *const c_char, value: i8) -> status_t;
    pub fn BMessage_SetUInt8(self_: *mut c_void, name: *const c_char, value: u8) -> status_t;
    pub fn BMessage_SetInt16(self_: *mut c_void, name: *const c_char, value: i16) -> status_t;
    pub fn BMessage_SetUInt16(self_: *mut c_void, name: *const c_char, value: u16) -> status_t;
    pub fn BMessage_SetInt32(self_: *mut c_void, name: *const c_char, value: i32) -> status_t;
    pub fn BMessage_SetUInt32(self_: *mut c_void, name: *const c_char, value: u32) -> status_t;
    pub fn BMessage_SetInt64(self_: *mut c_void, name: *const c_char, value: i64) -> status_t;
    pub fn BMessage_SetUInt64(self_: *mut c_void, name: *const c_char, value: u64) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_SetColor(self_: *mut c_void, name: *const c_char, value: rgb_color) -> status_t;
    pub fn BMessage_SetPointer(self_: *mut c_void, name: *const c_char, value: *const c_void) -> status_t;
    pub fn BMessage_SetString(self_: *mut c_void, name: *const c_char, string: *const c_char) -> status_t;
    pub fn BMessage_SetString1(self_: *mut c_void, name: *const c_char, string: *const c_void) -> status_t;
    pub fn BMessage_SetFloat(self_: *mut c_void, name: *const c_char, value: c_float) -> status_t;
    pub fn BMessage_SetDouble(self_: *mut c_void, name: *const c_char, value: c_double) -> status_t;
    pub fn BMessage_SetAlignment(self_: *mut c_void, name: *const c_char, value: *const c_void) -> status_t;
    pub fn BMessage_SetPoint(self_: *mut c_void, name: *const c_char, value: *const c_void) -> status_t;
    pub fn BMessage_SetRect(self_: *mut c_void, name: *const c_char, value: *const c_void) -> status_t;
    pub fn BMessage_SetSize(self_: *mut c_void, name: *const c_char, value: *const c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_SetData(self_: *mut c_void, name: *const c_char, type_: type_code, data: *const c_void, num_bytes: ssize_t, fixed_size: bool, count: c_int) -> status_t;
    pub fn BMessage_new() -> *mut c_void;
    pub fn BMessage_new1(other: *const c_void) -> *mut c_void;
    pub fn BMessage_new2(what: u32) -> *mut c_void;
    // DTOR: pub fn BMessage_~BMessage(self_: *mut c_void);

}
